changed logo and brand name

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BACKEND_URL=https://showtime-tix-backend.onrender.com
+VITE_BACKEND_URL=https://showtime-tix-backend.onrender.com/api
 
 
 VITE_GOOGLE_AUTH_URL=https://showtime-tix-backend.onrender.com/oauth2/authorization/google
